# number-guessing-game

./: .dockerignore  .gitignore  Dockerfile  README.Docker.md  README.md  compose.test.yaml  compose.yaml  makefile  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  db.py  main.py  models.py
app/database/: db.py
app/models/: models.py
app/routers/: games.py  guesses.py  items.py  players.py  test_games.py
app/templates/: index.html
app/tests/: conftest.py
app/tests/routers/: test_games.py  test_guesses.py  test_players.py
