[project]
name = "number-guessing-game"
version = "0.1.0"
description = "Nerdle: The number guessing game"
authors = [
    {name = "Brian O'Byrne", email = "brian.obyrne@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.112.0,<0.113.0",
    "pydantic-settings<2.9.0,>=2.8.0",
    "sqlmodel<0.1.0,>=0.0.8 ",
    "httpx<0.25.0,>=0.24.0 ",
    "pytest<7.5.0,>=7.4.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

