[project]
name = "number-guessing-game"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1,<0.117.0",
    "pydantic-settings>=2.10.1,<2.11.0",
    "sqlmodel>=0.0.24,<0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<8.5.0",
]
